infrastructure/controllers/kube-prometheus-stack/app/kube-prometheus-stack-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-prometheus-stack
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
