infrastructure/controllers/kube-prometheus-stack/app/kube-prometheus-stack-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  annotations:
    gethomepage.dev/href: "https://alerts.alpha.markmk.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Alertmanager"
    gethomepage.dev/description: "Receives and manages Prometheus alerts."
    gethomepage.dev/app: alertmanager
    gethomepage.dev/group: "Monitoring"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/prometheus.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`alerts.alpha.markmk.com`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
      middlewares:
        - name: tinyauth
          namespace: tinyauth
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  annotations:
    gethomepage.dev/href: "https://prometheus.alpha.markmk.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Prometheus"
    gethomepage.dev/description: "Metrics collection and monitoring."
    gethomepage.dev/app: prometheus
    gethomepage.dev/group: "Monitoring"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/prometheus.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`prometheus.alpha.markmk.com`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
      middlewares:
        - name: tinyauth
          namespace: tinyauth
